// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card button is not rendered if a card has the href property set 1`] = `
<div
  className="mfui-card mfui-card_href"
>
  <Link
    className="mfui-card__inner"
    href="card-href"
  >
    <div
      className="mfui-card__svg-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <span
        className="mfui-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card disable left align if there is a button and link 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__pic-wrapper mfui-card__pic-wrapper_object-fit_fill"
    >
      <img
        alt=""
        className="mfui-card__img"
        src="/test-src"
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card left align of the interactive element 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__pic-wrapper mfui-card__pic-wrapper_object-fit_fill"
    >
      <img
        alt=""
        className="mfui-card__img"
        src="/test-src"
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper mfui-card__btns-wrapper_left-align"
    >
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with icon 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__svg-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with img, if image source and svg source are specified 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__pic-wrapper mfui-card__pic-wrapper_object-fit_fill"
    >
      <img
        alt=""
        className="mfui-card__img"
        src="/test-src"
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with optional props 1`] = `
<div
  className="mfui-card mfui-card_centered-text className rootClass"
  data-testid="root-test"
>
  <div
    className="mfui-card__inner innerClass"
  >
    <div
      className="mfui-card__pic-wrapper mfui-card__pic-wrapper_object-fit_fill"
    >
      <img
        alt=""
        className="mfui-card__img"
        src="/test-src"
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button buttonClass"
        dataAttrs={
          Object {
            "root": Object {
              "data-testid": "button-test",
            },
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link linkClass"
        dataAttrs={
          Object {
            "root": Object {
              "data-testid": "link-test",
            },
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render component with required props 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
  </div>
</div>
`;

exports[`Card render with a single interactive button element 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__svg-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with a single interactive link element 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__svg-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with attribute "download" for <Button> and <Textlink> 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        download={true}
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        download={true}
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;

exports[`Card render with contain object fit 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <div
      className="mfui-card__pic-wrapper mfui-card__pic-wrapper_object-fit_contain"
    >
      <img
        alt=""
        className="mfui-card__img"
        src="/test-src"
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
    </div>
  </div>
</div>
`;

exports[`Card render with fullHeight 1`] = `
<div
  className="mfui-card mfui-card_full-height"
>
  <div
    className="mfui-card__inner"
  >
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
  </div>
</div>
`;

exports[`Card render with link on the card 1`] = `
<div
  className="mfui-card mfui-card_href"
>
  <Link
    className="mfui-card__inner"
    href="card-href"
    target="_blank"
  >
    <div
      className="mfui-card__svg-wrapper"
    >
      <test-file-stub
        style={
          Object {
            "display": "block",
            "fill": "#00B956",
          }
        }
      />
    </div>
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <span
        className="mfui-card__fake-link"
      >
        Подключить
      </span>
    </div>
  </Link>
</div>
`;

exports[`Card render without img and svg 1`] = `
<div
  className="mfui-card"
>
  <div
    className="mfui-card__inner"
  >
    <Header
      as="h3"
      className="mfui-card__title"
    >
      Смартфоны Huawei с дополнительной скидкой до 3000 ₽ и подарок — до 1000 ₽ на связь
    </Header>
    <div
      className="mfui-card__text"
    >
      Сдайте старое оборудование в трейд‑ин и получите дополнительную скидку до 3000 ₽ на смартфоны Huawei и до 1000 ₽ на связь в подарок.
    </div>
    <div
      className="mfui-card__btns-wrapper"
    >
      <Button
        className="mfui-card__button"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_blank"
      >
        Подробнее
      </Button>
      <TextLink
        className="mfui-card__link"
        dataAttrs={
          Object {
            "root": undefined,
          }
        }
        href="#"
        target="_self"
      >
        Подключить
      </TextLink>
    </div>
  </div>
</div>
`;
